@@ -1,0 +1,16 @@
+# $NetBSD: Makefile,v 1.1 2019/07/31 13:09:36 brook Exp $
+
+CATEGORIES=	math R
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	${R_HOMEPAGE_BASE}/acepack/
+COMMENT=	ACE and AVAS for selecting multiple regression transformations
+LICENSE=	mit
+
+R_PKGNAME=	acepack
+R_PKGVER=	1.4.1
+
+USE_LANGUAGES=	c fortran
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
