@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3102 2019/07/31 13:07:38 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3103 2019/07/31 13:09:36 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5059,3 +5059,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added math/R-Formula version 1.2.3 [brook 2019-07-31]
 	Added math/R-RandomFieldsUtils version 0.5.3 [brook 2019-07-31]
 	Added math/R-RcmdrMisc version 2.5.1 [brook 2019-07-31]
+	Added math/R-acepack version 1.4.1 [brook 2019-07-31]
